Inventory model support documentation
Change-Id: I6a1a82231bd7ab64b0829d905fbbf71822bb466b
Signed-off-by: Andrej Záň <andrej.zan@pantheon.sk>

--- a/manuals/developer-guide/src/main/asciidoc/topoprocessing/odl-topoprocessing-framework-dev.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/topoprocessing/odl-topoprocessing-framework-dev.adoc
@@ -170,6 +170,9 @@ image::topoprocessing/ModelAdapter.png[width=500]
 * odl-topoprocessing-network-topology - this feature contains logic to work with network-topology model
 * odl-topoprocessing-inventory - this feature contains logic to work with network-topology model
 
+=== Inventory Model Support
+include::odl-topoprocessing-inventory-dev.adoc[]
+
 === Link Computation
 include::odl-topoprocessing-link-computation-dev.adoc[]
 
