BGPCEP: BMP docs
odl-bgpcep-bmp feature user and dev guide

Change-Id: I3c32b9be92d0aa94ecf6c768c5bb23cb33f73eb3
Signed-off-by: Milos Fabian <milfabia@cisco.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -58,6 +58,8 @@ include::armoury/odl-armoury-dev.adoc[ARMOURY]
 
 include::bgpcep/odl-bgpcep-bgp-all-dev.adoc[BGP]
 
+include::bgpcep/odl-bgpcep-bmp-dev.adoc[BGP]
+
 include::capwap/capwap-dev.adoc[CAPWAP]
 
 include::controller/controller.adoc[Controller]
