--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -36,6 +36,8 @@ include::armoury/odl-armoury-user.adoc[ARMOURY]
 
 include::bgpcep/odl-bgpcep-bgp-all-user.adoc[BGP]
 
+include::bgpcep/odl-bgpcep-bmp-user.adoc[BMP]
+
 include::capwap/capwap-user.adoc[CAPWAP]
 
 include::didm/didm-user.adoc[]
